--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -978,14 +978,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "59320664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare submission DataFrame\n",
     "results = pd.DataFrame({\n",
-    "    \"PassengerId\": test_cleaned.index + 892,  # Adjusting index for submission\n",
+    "    \"PassengerId\": test_cleaned.index + 892,  \n",
     "    \"Survived\": model.predict(test_cleaned)\n",
     "})"
    ]
